--- a/help.html
+++ b/help.html
@@ -122,9 +122,10 @@
 					<div id = "networkCard" class="collapse" aria-labelledby="networkHeader" data-parent="#helpAccordion">
 						<div class = "card-body">
 							<h4><b>Network Analysis Information</b></h4>
+							The <a target="_blank" href="communities.html">Communities</a> heatmap depicts the percentage of highly oxidized (>20%) proteins in each community. Clicking on an individual community will populate the graph display for further exploration of the queried BioPlex community colored by oxidation % values (red: greater than 20%; orange: 10-20%; skyblue: less than 10%; gray: NQ).
 							<p>
 								<h4><b>Protein Interactions and Cys-Oxidation</b></h4>
-								Explore the interpaly between cys-oxidation and protein-protein interactions on the <a target="_blank" href="communities.html">Communities</a> page.
+								Explore the interplay between cys-oxidation and protein-protein interactions on the <a target="_blank" href="communities.html">Communities</a> page.
 							</p>
 							<image style = "max-height: 400px" src="img/communitiesPage.gif"></image>
 						</div>
