Remove enrichment from comm page

--- a/communities.html
+++ b/communities.html
@@ -50,7 +50,7 @@
 					<div class="container-fluid border-bottom">
 						<div class="row mr-sm-auto col-lg-12">
 							<div class="mr-sm-auto col-lg-6 col-md-6 pt-3 px-4">
-								<h4 id="communityEnrichmentLabel">BioPlex Community Enrichment</h4>
+								<h4 id="communityEnrichmentLabel">Oxidation within BioPlex Communities</h4>
 								<div class="my-4" id="communityHeatmap"></div>
 							</div>
 							<div class="row mr-sm-auto col-lg-6 col-md-6 pt-3 px-4">
