--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+ The Oximouse website is licensed under the CC BY 4.0 license: https://creativecommons.org/licenses/by/4.0/
+ @author Devin Schweppe <devin_schweppe@hms.harvard.edu>
+-->
 <!doctype html>
 <html lang="en">
 	<head>
