--- a/download.html
+++ b/download.html
@@ -1,4 +1,8 @@
 <!doctype html>
+<!--
+ The Oximouse website is licensed under the CC BY 4.0 license: https://creativecommons.org/licenses/by/4.0/
+ @author Devin Schweppe <devin_schweppe@hms.harvard.edu>
+-->
 <html lang="en">
 	<head>
 	    <meta charset="utf-8">
