--- a/lib/sidebar.html
+++ b/lib/sidebar.html
@@ -73,7 +73,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a id = "bioplexLink" class="nav-link" href="http://bioplex.hms.harvard.edu/bioplexDisplay/index.php" target="_blank">
+				<a id = "bioplexLink" class="nav-link" href="http://bioplex.hms.harvard.edu/explorer/index.php" target="_blank">
 					<span data-feather="external-link"></span>
 					BioPlex
 				</a>
