--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 								<h5>For additional information, check the <a href="help.html">Help</a> page</h5>
 								<br />
 								<p>
-									Please Cite: <b>Haopeng Xiao, et al.</b>
+									Please Cite: <b><a href = "https://doi.org/10.1016/j.cell.2020.02.012" target = "_blank">
+										Xiao, et al. A Quantitative Tissue-Specific Landscape of Protein Redox Regulation during Aging, Cell (2020)
+									</a></b>
 								</p>
 								<br />
 								<img border="0" src="img/oximouse.png" height="100">
