OxiMouse to Oximouse

--- a/download.html
+++ b/download.html
@@ -11,7 +11,7 @@
 	    <meta name="author" content="">
 	    <link rel="icon" href="../img/oximouse-02.png">
 	
-	    <title>OxiMouse Dashboard</title>
+	    <title>Oximouse Dashboard</title>
 	
 	    <!-- Oximouse CSS -->
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
